# Spelling

./: .gitignore  Cargo.toml  build.gradle.kts  flake.nix  go.mod  go.sum  gomod2nix.toml  gradle.properties  main.go  rust-toolchain.toml
.github/workflows/: build.yml  cachix-push.yml  nix-ci.yml  rust-ci.yml
assets/: README.md
crates/editor/: Cargo.toml  README.md
crates/game/plugins/: Cargo.toml  README.md
crates/game/plugins/crates/commons/: Cargo.toml
crates/game/plugins/crates/shooting_range_plugin/: Cargo.toml  README.md
crates/lat/: Cargo.toml  README.md  build.rs
crates/lat/example-implementations/only-reset/: Cargo.toml  flake.nix  rust-toolchain.toml
crates/lat/example-implementations/only-reset/src/: lib.rs
crates/lat/example-implementations/only-reset/wit/: lat.wit
crates/lat/src/: lib.rs  parser.rs  types.rs
crates/lat/src/types/: errors.rs
crates/lat/tests/: syntaxes.rs
crates/lat/wit/: lat.wit
internal/game/: example_scene.go  game.go
internal/nogit/: parser.go  types.go  types_test.go
scripts/: push-artifacts-to-cachix.nu  push-to-cachix.nu
src/: main.rs
src/main/java/dev/haruki7049/Spelling/: Main.java
