[package]
name = "spelling"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true
resolver = "3"

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/haruki7049/Spelling"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/editor",
  "crates/game/plugins",
  "crates/game/plugins/crates/commons",
  "crates/game/plugins/crates/shooting_range_plugin",
  "crates/lat",
]
exclude = ["crates/lat/example-implementations/only-reset"]

[workspace.dependencies]
lat.path = "crates/lat"
nom = "8.0.0"
bevy = "0.18.0"
bevy_simple_text_input = "0.13.0"
avian2d = "0.5.0"
clap = { version = "4.5.54", features = ["derive"] }
wasmtime = "41.0.0"
anyhow = "1.0.100"

[dependencies]
avian2d.workspace = true
bevy.workspace = true
bevy_simple_text_input.workspace = true
lat.workspace = true
clap.workspace = true
wasmtime.workspace = true
anyhow.workspace = true
wasmtime-wasi = "41.0.0"
