[package]
name = "lat"
description = "A default implementation for lat"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
wasmtime.workspace = true
bevy.workspace = true

[package.metadata.component]
package = "haruki7049:lat"

[package.metadata.component.dependencies]
